[gd_scene load_steps=7 format=3 uid="uid://cu2tha11bvl6n"]

[ext_resource type="Script" uid="uid://dlleieo7exhpf" path="res://secrets.gd" id="1_lxyxp"]
[ext_resource type="FontFile" uid="uid://d3xret8asdeg6" path="res://fonts/Xolonium-Regular.ttf" id="2_4botc"]
[ext_resource type="VideoStream" uid="uid://jyd647e0qc43" path="res://art/Peppino.ogv" id="3_4botc"]

[sub_resource type="InputEventAction" id="InputEventAction_qo8cm"]
action = &"pause"

[sub_resource type="InputEventAction" id="InputEventAction_xwvqn"]
action = &"controller_back"

[sub_resource type="Shortcut" id="Shortcut_xwvqn"]
events = [SubResource("InputEventAction_qo8cm"), SubResource("InputEventAction_xwvqn")]

[node name="Secrets" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_lxyxp")

[node name="SecretLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 125.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("2_4botc")
theme_override_font_sizes/font_size = 72
text = "Secrets"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Secret1" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -582.5
offset_top = -570.0
offset_right = -232.5
offset_bottom = -460.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4botc")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xwvqn")
text = "Secret 1"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -120.0
offset_right = 125.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_4botc")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_xwvqn")
text = "Back"

[node name="Secret1Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Secret1Video" type="VideoStreamPlayer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.0
offset_top = -140.0
offset_right = 249.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("3_4botc")
loop = true

[connection signal="pressed" from="Secret1" to="." method="_on_secret_1_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="Secret1Timer" to="." method="_on_secret_1_timer_timeout"]
